Fix horizontal scroll bug on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -295,7 +295,7 @@
 /*____ABOUT____*/
 /*=================================*/
 .about {
-  margin-top: -6rem;
+  margin-top: 0;
   padding-top: 5rem;
   padding-bottom: 6rem;
 }
